# safety-dashboard

./: .env.example  .gitignore  API_CONTRACT.md  CLAUDE.md  CLAUDE_HISTORY.md  EPISODES.md  README.md  SETUP.md  architecture.md  pyproject.toml
frontend/: app.js  index.html  manifest.json  style.css
src/safety_dashboard/: __init__.py  api.py  attacks.py  handlers.py  llm.py  main.py  preferences.py  schemas.py  scoreboard.py
src/safety_dashboard/tools/: __init__.py  _capture.py  custom_tool.py
